--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 aiogram~=3.18.0
 opencv-python~=4.11.0.86
 mtcnn~=1.0.0
+tensorflow~=2.19.0
+numpy~=2.1.3
+
+keras~=3.9.2
+pillow~=11.2.1
+scikit-learn~=1.6.1
